--- a/app/assets/stylesheets/invitations_edit.css.scss
+++ b/app/assets/stylesheets/invitations_edit.css.scss
@@ -53,6 +53,14 @@
    color: rgba(255,255,255,0.4);
 }
 
+.your-profile-currentpw {
+	margin-bottom: 20px !important;
+}
+
+.your-profile-lastpw {
+	margin-bottom: 40px !important;
+}
+
 .invite-title {
 	color: white;
 	margin: 50px auto;
