--- a/app/assets/stylesheets/videos_index.css.scss
+++ b/app/assets/stylesheets/videos_index.css.scss
@@ -287,7 +287,8 @@
 	background-color:rgba(0, 0, 0, 0.7);
 	position: absolute;
 	bottom: 10px;
-  	right: 10px;
-  	padding: 5px;
-  	border-radius: 5px;
+  right: 10px;
+  padding: 5px;
+  border-radius: 5px;
+	font-weight: 600;
 }
